<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">oocalc</string>
    <string name="hello_world">Hello world!</string>
    <string name="about">About</string>
    <string name="inputnum">Enter Number</string>
    <string name="defbutheight">35dp</string>
    <string name="defbutmes">temp</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="times">x</string>
    <string name="divide">÷</string>
    <string name="sign">+/-</string>
    <string name="sine">sin</string>
    <string name="cosine">cos</string>
    <string name="tangent">tan</string>
    <string name="ln">ln</string>
    <string name="log">log</string>
    <string name="sin1">sin ^-1</string>
    <string name="cos1">cos ^-1</string>
    <string name="tan1">tan ^-1</string>
    <string name="etox">e^x</string>
    <string name="tentox">10^x</string>
    <string name="xtoy">x^y</string>
    <string name="xtotwo">x^2</string>
    <string name="n">n!</string>
    <string name="sqrt">√</string>
    <string name="oneoverx">1/x</string>
    <string name="exp">EXP</string>
    <string name="degree">°</string>
    <string name="pi">π</string>
    <string name="copy">copy</string>
    <string name="clear">clr</string>
    <string name="title_activity_display_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="aboutmessage">oocalc\nVersion 1.0\nAugust 29, 2014\n\nTal Melamed\ntalm@uvic.ca\n@Talamalopilis\n\nVictoria BC, Canada\n\n:)</string>

</resources>
