<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@android:color/black" >
	
    	
     <LinearLayout 
        android:id="@+id/centerline"
    	android:layout_width="0dp"
    	android:layout_height="match_parent"
    	android:orientation="horizontal"
    	android:layout_centerHorizontal="true"
    	android:background="@android:color/black"></LinearLayout>

     <EditText
         android:id="@+id/numbox1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_toLeftOf="@id/centerline"
         android:hint="@string/inputnum"
         android:imeOptions="actionDone"
         android:inputType="number|numberSigned|numberDecimal"
         android:textColor="@android:color/white"
         android:textSize="22sp" />
     
    <EditText
        android:id="@+id/numbox2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/numbox1"
        android:hint="@string/inputnum"
        android:imeOptions="actionDone"
        android:inputType="number|numberSigned|numberDecimal"
        android:textColor="@android:color/white"
        android:textSize="22sp" />
    
    <EditText
        android:id="@+id/numbox4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/numbox2"
        android:layout_toRightOf="@id/centerline"
        android:hint="@string/inputnum"
        android:imeOptions="actionDone"
        android:inputType="number|numberSigned|numberDecimal"
        android:textColor="@android:color/white"
        android:textSize="22sp" />
    
    <EditText
        android:id="@+id/numbox3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/numbox1"
        android:layout_toLeftOf="@id/centerline"
        android:hint="@string/inputnum"
        android:imeOptions="actionDone"
        android:inputType="number|numberSigned|numberDecimal"
        android:textColor="@android:color/white"
        android:textSize="22sp" />
    
    <ToggleButton
        android:id="@+id/button1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@id/centerline"
        android:layout_alignBottom="@id/numbox1" 
        android:textOn="@string/defbutmes"
    	android:textOff="@string/defbutmes" 
    	android:visibility="gone"
    	android:textSize="19sp" ></ToggleButton>
    	
    <ToggleButton
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/centerline"
        android:layout_alignBottom="@id/numbox2"  
        android:textOn="@string/defbutmes"
    	android:textOff="@string/defbutmes"
    	android:visibility="gone"
    	android:textSize="19sp" ></ToggleButton>
    	
    <ToggleButton
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@id/centerline"
        android:layout_below="@id/numbox1" 
        android:layout_alignBottom="@id/numbox3"
        android:textOn="@string/defbutmes"
    	android:textOff="@string/defbutmes"
    	android:visibility="gone"
    	android:textSize="19sp" ></ToggleButton>
    	
    <ToggleButton
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/centerline" 
        android:layout_below="@id/numbox2"
        android:layout_alignBottom="@id/numbox4"
        android:textOn="@string/defbutmes"
    	android:textOff="@string/defbutmes"
    	android:visibility="gone"
    	android:textSize="19sp"></ToggleButton>
    
  <LinearLayout 
      android:id="@+id/opsrows"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:orientation="vertical"
      android:layout_below="@id/numbox3"
      android:layout_alignParentBottom="true" >
    	
	    <LinearLayout 
	        android:id="@+id/opsrow1"
	    	android:layout_width="match_parent"
	    	android:layout_height="0dp"
	    	android:layout_weight="1"
	    	android:orientation="horizontal" >
	    
	    	<ToggleButton
	        	android:id="@+id/plus"
		        android:layout_width="0dp"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:textOn="@string/plus"
		        android:textOff="@string/plus"
		        android:enabled="false"
		        android:textSize="22sp" />
		    
		    <ToggleButton
		        android:id="@+id/minus"
		        android:layout_width="0dp"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:textOn="@string/minus"
		        android:textOff="@string/minus"
		        android:enabled="false"
		        android:textSize="22sp" />
		    
		    <ToggleButton
		        android:id="@+id/times"
		        android:layout_width="0dp"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:textOn="@string/times"
		        android:textOff="@string/times"
		        android:enabled="false"
		        android:textSize="22sp" />
		    
		    <ToggleButton
		        android:id="@+id/divide"
		        android:layout_width="0dp"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:textOn="@string/divide"
		        android:textOff="@string/divide"
		        android:enabled="false"
		        android:textSize="22sp" />
		    
		    <Button
		        android:id="@+id/sign"
		        android:layout_width="0dp"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:text="@string/sign"
		        android:enabled="false" />
	    
	    </LinearLayout>
	    
	    <LinearLayout 
	        android:id="@+id/opsrow2"
	        android:layout_width="match_parent"
	    	android:layout_height="0dp"
	    	android:layout_weight="1"
	    	android:orientation="horizontal" >
	        
	        <Button 
	            android:id="@+id/sine"
	            android:layout_width="0dp"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:text="@string/sine"
		        android:enabled="false"
	            />
	        
	        <Button 
	            android:id="@+id/cosine"
	            android:layout_width="0dp"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:text="@string/cosine"
		        android:enabled="false"
	            />
	        
	        <Button 
	            android:id="@+id/tangent"
	            android:layout_width="0dp"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:text="@string/tangent"
		        android:enabled="false"
	            />
	        
	        <Button 
	            android:id="@+id/ln"
	            android:layout_width="0dp"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:text="@string/ln"
		        android:enabled="false"
	            />
	        
	        <Button 
	            android:id="@+id/log"
	            android:layout_width="0dp"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:text="@string/log"
		        android:enabled="false"
	            />
	        
	    </LinearLayout>
	    
	    <LinearLayout 
	        android:id="@+id/opsrow3"
	        android:layout_width="match_parent"
	    	android:layout_height="0dp"
	    	android:layout_weight="1"
	    	android:orientation="horizontal" >
	        
	        <Button 
	            android:id="@+id/sin1"
	            android:layout_width="0dp"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:text="@string/sin1"
		        android:enabled="false"
	            />
	        
	        <Button 
	            android:id="@+id/cos1"
	            android:layout_width="0dp"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:text="@string/cos1"
		        android:enabled="false"
	            />
	        
	        <Button 
	            android:id="@+id/tan1"
	            android:layout_width="0dp"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:text="@string/tan1"
		        android:enabled="false"
	            />
	        
	        <Button 
	            android:id="@+id/etox"
	            android:layout_width="0dp"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:text="@string/etox"
		        android:enabled="false"
	            />
	        
	        <Button 
	            android:id="@+id/tentox"
	            android:layout_width="0dp"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:text="@string/tentox"
		        android:enabled="false"
	            />
	        
	    </LinearLayout>
	    
	    <LinearLayout 
	        android:id="@+id/opsrow4"
	        android:layout_width="match_parent"
	    	android:layout_height="0dp"
	    	android:layout_weight="1"
	    	android:orientation="horizontal" >
	        
	     <ToggleButton
		        android:id="@+id/xtoy"
		        android:layout_width="0dp"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:textOn="@string/xtoy"
		        android:textOff="@string/xtoy"
		        android:enabled="false" /> 
		        
	     <Button 
	            android:id="@+id/xtotwo"
	            android:layout_width="0dp"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:text="@string/xtotwo"
		        android:enabled="false"
	            />
		        
	     <Button 
	            android:id="@+id/n"
	            android:layout_width="0dp"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:text="@string/n"
		        android:enabled="false"
	            />
	     
	     <Button 
	            android:id="@+id/sqrt"
	            android:layout_width="0dp"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:text="@string/sqrt"
		        android:enabled="false"
	            />
	     
	     <Button 
	            android:id="@+id/oneoverx"
	            android:layout_width="0dp"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:text="@string/oneoverx"
		        android:enabled="false"
	            />
	        
	    </LinearLayout>
	    
	    <LinearLayout 
	        android:id="@+id/opsrow5"
	        android:layout_width="match_parent"
	    	android:layout_height="0dp"
	    	android:layout_weight="1"
	    	android:orientation="horizontal" >
	        
	        <ToggleButton
		        android:id="@+id/exp"
		        android:layout_width="0dp"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:textOn="@string/exp"
		        android:textOff="@string/exp"
		        android:enabled="false" />
	        
	        <Button
	            android:id="@+id/euler"
	            android:layout_width="0dp"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:text="@string/degree"
		        android:enabled="true" />
	        
	        <Button 
	            android:id="@+id/pi"
	            android:layout_width="0dp"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:text="@string/pi"
		        android:enabled="false" />
	        
	        <ToggleButton
		        android:id="@+id/copy"
		        android:layout_width="0dp"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:textOn="@string/copy"
		        android:textOff="@string/copy"
		        android:enabled="false" />
	        
	        <Button 
	            android:id="@+id/clear"
	            android:layout_width="0dp"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:text="@string/clear"
		        android:enabled="false" />
	        
	    </LinearLayout>
	</LinearLayout>
</RelativeLayout>